--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
         <div class="menu_div">
             <button id="menu_list" onclick="getMenu()">Show Menu</button>
+            <div id="display_menu"></div>
         </div>
     </div>
     
